index page placed in home directory

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <title>Landing Page</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
     <body>
        <div class="container-div">
             <div class="nav-div">
                 <nav>
-                    <img src="../images/logo.svg" class="logo-img">
+                    <img src="./images/logo.svg" class="logo-img">
                     <ul class="top-nav">
                         <li><a>Home</a></li>
                         <li><a>Find a doctor</a></li>
@@ -30,7 +30,7 @@
                             <button class="consult-btn">consult today</button>
                         </div>
                         <div class="illustration-div">
-                                <img src="../images/illustration.svg" class="illustration-img">
+                                <img src="./images/illustration.svg" class="illustration-img">
                         </div>
                 </div>
                 <div class="our-services-div">
@@ -43,17 +43,17 @@
                 <div class="services-div">
                     <div class="first-services-row">
                             <div class="services">
-                                <img src="../images/Frame-2.svg" class="services-img">
+                                <img src="./images/Frame-2.svg" class="services-img">
                                 <h3>Search Doctor</h3>
                                 <h5>Choose your doctor from thousands of specialist, general, and trusted hospitals</h5>
                             </div>
                             <div class="services">
-                                <img src="../images/Frame-3.svg" class="services-img">
+                                <img src="./images/Frame-3.svg" class="services-img">
                                 <h3>Online Pharmacy</h3>
                                 <h5>Buy  your medicines with our mobile application with a simple delivery system</h5>
                             </div>
                             <div class="services">
-                                <img src="../images/Frame-4.svg" class="services-img">
+                                <img src="./images/Frame-4.svg" class="services-img">
                                 <h3>Consultation</h3>
                                 <h5>Free consultation with our trusted doctors and get the best recomendations</h5>
                             </div>
@@ -61,18 +61,18 @@
 
                     <div class="second-services-row">
                         <div class="services">
-                            <img src="../images/Frame-5.svg" class="services-img">
+                            <img src="./images/Frame-5.svg" class="services-img">
                             <h3>Details info</h3>
                             <h5>Free consultation with our trusted doctors and get the best recomendations</h5>
                         </div>
                         <div class="services">
-                            <img src="../images/Frame-6.svg" class="services-img">
+                            <img src="./images/Frame-6.svg" class="services-img">
                             <h3>Emergency care</h3>
                             <h5>You can get 24/7 urgent care for yourself or your children and your
                                 lovely family</h5>
                         </div>
                         <div class="services">
-                            <img src="../images/Frame-7.svg" class="services-img">
+                            <img src="./images/Frame-7.svg" class="services-img">
                             <h3>Tracking</h3>
                             <h5>Track and save your medical history and health data </h5>
                         </div>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="health-provider-div">
                         <div class="health-provider-img-div">
-                            <img src="../images/trafalgar-illustration sec02 1.svg" class="health-provider-img">
+                            <img src="./images/trafalgar-illustration sec02 1.svg" class="health-provider-img">
                         </div>
                         <div class="leading-health-care">
                             <h3>Leading healthcare providers</h3>
@@ -101,10 +101,10 @@
                         <h5>Our dedicated patient engagement app and 
                             web portal allow you to access information instantaneously (no tedeous form, long calls, 
                             or administrative hassle) and securely</h5>
-                        <button class="learn-more-btn">Download<img src='../images/Vector.svg' class="down-arrow"></button>
+                        <button class="learn-more-btn">Download<img src='./images/Vector.svg' class="down-arrow"></button>
                     </div>
                     <div class="health-provider-img-div">
-                        <img src="../images/trafalgar-illustration sec03 1.svg" class="health-provider-img">
+                        <img src="./images/trafalgar-illustration sec03 1.svg" class="health-provider-img">
                     </div>
                 </div>
                 <div class="feedback-div">
@@ -112,7 +112,7 @@
                     <div class="border-bottom-white"></div>
                     <div class="user-div">
                         <div class="image-frame">
-                            <img src="../images/profile-image.svg" class="profile-image">
+                            <img src="./images/profile-image.svg" class="profile-image">
                         </div>
                         <div class="info">
                             <h4>Edward Newgate</h4>
@@ -128,12 +128,12 @@
                     </div> 
                 </div>
                 <div class="elipsis-div">
-                    <img src="../images/arrow-back.svg" class="arrow-elipsis-back">
-                    <img src="../images/Ellipse 5.svg" class="elipsis">
-                    <img src="../images/Ellipse 6.svg" class="elipsis">
-                    <img src="../images/Ellipse 6.svg" class="elipsis">
-                    <img src="../images/Ellipse 6.svg" class="elipsis">
-                    <img src="../images/arrow-forward.svg" class="arrow-elipsis-forward">
+                    <img src="./images/arrow-back.svg" class="arrow-elipsis-back">
+                    <img src="./images/Ellipse 5.svg" class="elipsis">
+                    <img src="./images/Ellipse 6.svg" class="elipsis">
+                    <img src="./images/Ellipse 6.svg" class="elipsis">
+                    <img src="./images/Ellipse 6.svg" class="elipsis">
+                    <img src="./images/arrow-forward.svg" class="arrow-elipsis-forward">
                 </div>
                 
             </div>
