hover effect added to nav bar

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <nav>
                     <img src="./images/logo.svg" class="logo-img">
                     <ul class="top-nav">
-                        <li><a>Home</a></li>
-                        <li><a>Find a doctor</a></li>
-                        <li><a>Apps</a></li>
-                        <li><a>Testimonial</a></li>
-                        <li><a>About Us</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Find a doctor</a></li>
+                        <li><a href="#">Apps</a></li>
+                        <li><a href="#">Testimonial</a></li>
+                        <li><a href="#">About Us</a></li>
                     </ul>
                 </nav>
                 <div class="body-top-div">
@@ -126,14 +126,6 @@
                             </p>
                         </div>
                     </div> 
-                </div>
-                <div class="elipsis-div">
-                    <img src="./images/arrow-back.svg" class="arrow-elipsis-back">
-                    <img src="./images/Ellipse 5.svg" class="elipsis">
-                    <img src="./images/Ellipse 6.svg" class="elipsis">
-                    <img src="./images/Ellipse 6.svg" class="elipsis">
-                    <img src="./images/Ellipse 6.svg" class="elipsis">
-                    <img src="./images/arrow-forward.svg" class="arrow-elipsis-forward">
                 </div>
                 
             </div>
